four question added on blog page

--- a/blogs.html
+++ b/blogs.html
@@ -40,9 +40,17 @@
             <div tabindex="0"
                 class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box shadow-lg shadow-indigo-500/50 mt-12">
                 <div class="collapse-title text-xl font-medium">
-                    Why should we use template string ? </div>
+                    How javscript Event Loop works ? </div>
                 <div class="collapse-content">
-                    <p>Template strings are a powerful feature of modern JavaScript released in ES6. It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that are complex and contain dynamic elements.</p>
+                    <p>The <span class="text-orange-500">Event Loop</span> has one simple job — to monitor the Call Stack and the Callback Queue. If the Call Stack is empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which effectively runs it. Such an iteration is called a tick in the Event Loop.</p>
+                </div>
+            </div>
+            <div tabindex="0"
+                class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box shadow-lg shadow-indigo-500/50 mt-12">
+                <div class="collapse-title text-xl font-medium">
+                    When Javascript return undefined? </div>
+                <div class="collapse-content">
+                    <p>A variable that has not been assigned a value is of type <span class="text-orange-500">undefined</span> . A method or statement also returns undefined if the variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not returned .</p>
                 </div>
             </div>
         </section>
