--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,9 @@
                 </div>
                 <div class="collapse-content">
                     <p>The difference between <span class="text-orange-500">sessionStorage</span> and <span class="text-orange-500">localStorage</span>  is that localStorage data does not expire, whereas sessionStorage data is cleared when the page session ends. A unique page session gets created once a document is loaded in a browser tab. Page sessions are valid for only one tab at a time..</p>
+                    <div>
+                        <img src="./images/1_HC1PWdue5ZofBEwOMEsBBA.png" alt="">
+                    </div>
                 </div>
             </div>
             <div tabindex="0"
@@ -35,6 +38,9 @@
                     Difference between Global scope and Block scope ? </div>
                 <div class="collapse-content">
                     <p>In a browser environment, the <span class="text-orange-500">global scope</span> is controlled by the window object while in Node. js, it's controlled by the global object. <span class="text-orange-500"> Block scopes</span> are what you get when you use if statements, for statements, and the like..</p>
+                    <div>
+                        <img src="./images/images.png" alt="">
+                    </div>
                 </div>
             </div>
             <div tabindex="0"
@@ -43,6 +49,9 @@
                     How javscript Event Loop works ? </div>
                 <div class="collapse-content">
                     <p>The <span class="text-orange-500">Event Loop</span> has one simple job — to monitor the Call Stack and the Callback Queue. If the Call Stack is empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which effectively runs it. Such an iteration is called a tick in the Event Loop.</p>
+                    <div>
+                        <img src="./images/download (7).png" alt="">
+                    </div>
                 </div>
             </div>
             <div tabindex="0"
@@ -51,6 +60,9 @@
                     When Javascript return undefined? </div>
                 <div class="collapse-content">
                     <p>A variable that has not been assigned a value is of type <span class="text-orange-500">undefined</span> . A method or statement also returns undefined if the variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not returned .</p>
+                    <div>
+                        <img src="./images/main-qimg-bbb2f0a59077fadd5f90e15c295d6220-pjlq.jfif" alt="">
+                    </div>
                 </div>
             </div>
         </section>
